# qomponent

./: .gitignore  CMakeLists.txt  Qomponent.pro  README.md
Qomponent/: ArcSlider.qml  AutoCompleteInput.qml  BarChart.qml  CColorPicker.qml  CMakeLists.txt  CircularColorPicker.qml  ColorPicker.qml  DragableGridView.qml  EyeDropper.qml  FontSelector.qml  LinearGauge.qml  MDText.qml  MiniKeyboard.qml  MiniMarkdown.qml  MultiRangeSlider.qml  PatternLock.qml  Qomponent.pri  Qomponent.pro  Qomponent.qml  RippleThemeTransition.qml  TextAnimation.qml  ThemeEditor.qml  Tiltable.qml  TimePicker.qml  ToolTipPlus.qml  UITour.qml  VRow.qml  WToolTip.qml  qmldir  qomponent.qmltypes  qomponent.qrc  scripts.js
Qomponent/base/: BoxShadow.qml  ColorEditor.qml  ColorPicker.qml  DashedLine.qml  ElasticEffect.qml  FastShadow.qml  FocusEffect.qml  FontEditor.qml  GridRuler.qml  Guide.qml  Pie.qml  QRect.qml  Ruler.qml  UITourItem.qml
Qomponent/quick/: Grid.qml  GridSeparator.qml  QGrid.qml
Qomponent/shader/: bar-chart.frag  boxshadow.frag  color-ring.frag  color-ring.glsl  dashed-lines.glsl  elastic.frag  focus.frag  focus.glsl  grid-ruler.frag  grid-ruler.glsl  iball.frag  pi.glsl  pie.frag  pie.glsl  qrect.frag  ripple-mask.frag  ruler.frag  ruler.glsl  saturation-spectrom.frag  value-spectrom.frag
docs/: README.md
example/: example.pro
example/example-1/: CMakeLists.txt  example-1.pro  main.cpp  main.qml
example/example-2/: MainPage.qml  example-2.pro  main.cpp  main.qml  qml.qrc
example/example-3/: CMakeLists.txt  Page1.qml  Page2.qml  main.cpp  main.qml
